--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<form>	
 				<div class="row">
 					<div class="col p-3">
-						<input type="text" class="form-control input" required id="result" placeholder="Temperature">
+						<input type="number" class="form-control input" required id="result" placeholder="Temperature">
 					</div>
 					<div class="col p-3">
 						<select id="selectBox" onchange="display()"><option value="1">Fahrenheit</option>
